# my-playground

./: .gitignore  :w  :wq  README.MD  README.md
AOC/day_1/: Cargo.toml
AOC/day_6/: Cargo.toml
AOC/nom/: Cargo.toml
AOC/nomnom/: Cargo.toml
CodeWars/cSharp/: Program.cs
CodeWars/kotlin/: settings.gradle
Java/codewars/: settings.gradle.kts
Leetcode/csharp/: Program.cs
axum_tax/: .gitignore  Cargo.toml
axum_tax/src/: main.rs
azure-studies/cart/: deployment.yaml
dotnet/: README.md
dotnet/EFGetStarted/: Model.cs  Program.cs
dotnet/RefactoringTest_Practice/: RefactoringTest.sln
dotnet/classes/: Hondjes.cs  Person.cs  Program.cs  VierVoeter.cs
dotnet/linq-me-baby/: Program.cs  linq-me-baby.csproj
dotnet/minimal-apis-course-final-master/: MinimalApisCourse.sln
dotnet/recursion-studies/: Program.cs  console-app.csproj
dotnet/review/: Program.cs
dotnet/rpg-game-dotnet6/: AutoMapperProfile.cs  Program.cs  WeatherForecast.cs  rpg-game-dotnet6.csproj
dotnet/studies/: Person.cs  Program.cs
kotlin/demo/: settings.gradle
nextJs/poke-around-react-next/: README.md  package.json
nom-nom-nom/: Cargo.toml
nom-nom-nom/src/: main.rs  nom_test.rs  parser.rs  test-input.txt
nuxt/: README.md
nuxt/nuxt-app/: pnpm-lock.yaml
python/fast_api_chat_server/: README.md  docker-compose.yml  main.py  pyproject.toml
python/fast_api_chat_server/app/: db.py  main.py  models.py
python/fastapi-tutorial/: pyproject.toml
python/fastapi-tutorial/app/: app.py
python/leetcode/: 0001_two_sum.py  0020_valid_parentheses.py  0021_merge_two_sorted_lists.py  (+16 more)
(+249 files in other folders)
