[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.4.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.44.0",
]
